# foliochat

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  api.py  chroma.py  chunker.py  foliochat.tsx  github-issues.md  github.py  main.py  nixpacks.toml  prompt.py  pyproject.toml  railway.toml
.github/workflows/: deploy.yml  weekly-crawl.yml
cli/: main.py
cli/chunker/: chunker.py
cli/crawler/: github.py
cli/embedder/: embedder.py
cli/serve/: api.py  prompt.py
cli/store/: chroma.py
component/: package.json  tsconfig.json
docs/: DEVLOG.md  architecture.md  issues.md
examples/nextjs/: .env.example  README.md  layout.tsx
examples/vanilla-html/: .env.example  README.md  index.html
foliochat-data/southwestmogrown/: metadata.json  system_prompt.txt
skills/: SKILL_optimize_dependencies.md
tests/: test_api.py  test_chroma.py  test_chunker.py  test_cli.py  test_component.py  test_crawler.py  test_embedder.py  test_prompt.py  test_scaffold.py
